[metadata]
name = animalia
description = Animalia
long_description = file: README.md
version = 0.0.3
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
	animalia = animalia.cli:execute_from_command_line

[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	appyratus

include_package_data = True

[options.package_data]
data = *.txt
