[metadata]
name = animalia
description = Animalia
long_description = file: README.md
version = 0.0.9
keywords = 
author = Gigaquads
author_email = notdsk@gmail.com
url = https://pypi.org/project/animalia
	
classifiers = 
	Programming Language :: Python :: 3.9

[options]
scripts = 
dependency_links = 
packages = 
	find:
install_requires = 
	appyratus
#include_package_data = true
#package_dir = 
#	animalia = animalia


[options.entry_points]
console_scripts =
	animalia = animalia.cli:execute_from_command_line


#[options.package_data]
#animalia = data/*.txt
